# dify-plugin-sdks

./: .gitignore  404.html  AGENTS.md  CONTRIBUTING.md  README.md  justfile  prek.toml  pyproject.toml  sitemap.xml
.github/: pull_request_template.md
.github/workflows/: lint.yaml  mega-linter.yaml  mkdocs.yaml  mkdocs.yml  pr.yml  pull-request.yaml  pypi_publish.yaml  release.yml  test.yml
examples/: __init__.py
examples/agent/: pyproject.toml
examples/agent/output_parser/: cot_output_parser.py
examples/agent/strategies/: ReAct.py  ReAct.yaml  function_calling.py  react.py
examples/dropbox_trigger/: pyproject.toml
examples/dropbox_trigger/events/: __init__.py
examples/dropbox_trigger/provider/: dropbox.py
examples/firecrawl_datasource/: pyproject.toml
examples/firecrawl_datasource/datasources/: crawl.py  firecrawl_app.py
examples/firecrawl_datasource/provider/: firecrawl_datasource.py
examples/github/: pyproject.toml
examples/github/provider/: github.py
examples/github_trigger/: README.md  pyproject.toml
examples/gmail_trigger/: README.md  pyproject.toml
examples/google/: pyproject.toml
examples/google_calendar_trigger/: pyproject.toml
examples/google_calendar_trigger/events/: google_calendar_event_created.py  google_calendar_event_deleted.py  google_calendar_event_updated.py  utils.py
examples/google_calendar_trigger/provider/: google_calendar_trigger.py
examples/google_cloud_storage/: pyproject.toml
examples/google_cloud_storage/datasources/: google_cloud_storage.py
examples/google_cloud_storage/provider/: google_cloud_storage.py
examples/google_cloud_storage/tests/: test_provider.py
examples/google_drive_trigger/: pyproject.toml
examples/jina/: pyproject.toml
examples/jina/models/: __init__.py
examples/jina/models/rerank/: rerank.py
examples/jina/models/text_embedding/: jina_tokenizer.py  text_embedding.py
examples/jina/provider/: jina.py
examples/jina/tests/: test_rerank.py
examples/lark_trigger/: pyproject.toml
examples/lark_trigger/events/: _shared.py
examples/lark_trigger/events/approval/: approval_updated_v4.py
examples/lark_trigger/events/calendar/: calendar_acl_created_v4.py  calendar_acl_deleted_v4.py  calendar_changed_v4.py  event_changed_v4.py
examples/lark_trigger/events/contact/: department_created_v3.py  department_deleted_v3.py  department_updated_v3.py  scope_updated_v3.py  user_created_v3.py  user_deleted_v3.py  user_updated_v3.py
examples/lark_trigger/events/drive/: file_bitable_field_changed_v1.py  file_bitable_record_changed_v1.py  file_created_v1.py  file_deleted_v1.py  file_edit_v1.py  file_permission_member_added_v1.py  file_permission_member_removed_v1.py  file_read_v1.py  file_title_updated_v1.py  file_trashed_v1.py
examples/lark_trigger/events/im/: chat_disbanded_v1.py  chat_member_bot_added_v1.py  chat_member_bot_deleted_v1.py  chat_member_user_added_v1.py  chat_member_user_removed_v1.py  chat_member_user_withdrawn_v1.py  chat_updated_v1.py  message_reaction_added_v1.py  message_reaction_deleted_v1.py  message_read_v1.py  message_recalled_v1.py  message_receive_v1.py
examples/lark_trigger/events/meeting_room/: meeting_room_created_v1.py  meeting_room_status_changed_v1.py
examples/lark_trigger/events/task/: task_comment_updated_v1.py  task_updated_v1.py
examples/lark_trigger/events/vc/: join_meeting_v1.py  leave_meeting_v1.py  meeting_ended_v1.py  meeting_started_v1.py  recording_ended_v1.py  recording_ready_v1.py  recording_started_v1.py
examples/lark_trigger/provider/: lark.py
examples/neko/: pyproject.toml
examples/neko/endpoints/: duck.py  girls.py  girls_talk.py  neko.py  tts.py
examples/notion_datasource/: GUIDE.md  pyproject.toml
examples/notion_datasource/datasources/: notion_datasource.py
examples/notion_datasource/datasources/utils/: notion_client.py  notion_extractor.py
examples/notion_datasource/provider/: notion_datasource.py
examples/openai/: pyproject.toml
examples/openai/models/llm/: llm.py
examples/openai/models/moderation/: moderation.py
examples/openai/models/speech2text/: speech2text.py
examples/openai/models/text_embedding/: text_embedding.py
examples/openai/models/tts/: tts-1-hd.yaml  tts-1.yaml  tts.py
examples/openai/provider/: openai.py
examples/openai/tests/: test_tts.py
examples/openai_compat/: pyproject.toml
examples/openai_compat/models/: common_openai.py
examples/openai_compat/provider/: openai_api_compatible.py
examples/slack_trigger/: pyproject.toml
examples/slack_trigger/events/: _catalog_event.py
examples/slack_trigger/provider/: slack.py
examples/telegram_trigger/: pyproject.toml
python/: .gitignore  .ruff.toml  README.md  pyproject.toml  test.py
python/.mkdocs/: mkdocs.yml
python/dify_plugin/: __init__.py  cli.py  plugin.py
python/examples/: .env.ssl.example
python/scripts/: build_raw_docs.sh  lint.sh
python/shai_plugin/: __init__.py  plugin.py
python/tests/: test_llm_result.py  test_model_registry_get_model.py  test_multimodal_requests.py  test_prompt_message.py  test_ssl_config.py  test_tool_call_model_init.py  test_trigger_factory.py
schema/: index.html
scripts/: setup-dify-plugin-cli.sh  setup-shai-plugin-cli.sh
search/: search_index.json
src/dify_plugin/: __init__.py  _gevent.py  cli.py  plugin.py
tests/: test_documentation_generator.py  test_import_runtime.py  test_llm_result.py  test_model_polling.py  test_model_registry_get_model.py  test_prompt_message.py  test_tool_call_model_init.py  test_trigger_factory.py
tests/__mock_server/: __main__.py  openai.py
tests/config/: test_config.py
tests/core/: test_detect_audio_suffix.py  test_invoke_speech_to_text.py  test_plugin_registration.py  test_session_context.py  test_yaml_loader.py
tests/entities/: __init__.py  test_parameters.py  test_tool.py
tests/integration/: conftest.py  test_entities.py  test_invoke_llm.py
tests/invocations/: test_app.py  test_storage.py
tests/servers/: test_response_writer.py  test_serverless.py  test_session.py  test_stdio.py  test_tcp.py
tests/utils/: test_http_parser.py
(+1192 files in other folders)
