[project]
name = "google_cloud_storage_plugin"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"

# Managed with uv; refresh the lockfile with `uv lock`.
dependencies = [
    "dify_plugin",
    "google-cloud-storage>=3.7.0,<4",
]

[tool.uv.sources]
dify_plugin = { path = "../..", editable = true }
