[project]
name = "lark_trigger"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"

# Managed with uv; refresh the lockfile with `uv lock`.
dependencies = [
    "cachetools==6.2.1",
    "dify_plugin",
    "lark-oapi==1.4.24",
    "werkzeug>=3.1.3",
]

[tool.uv.sources]
dify_plugin = { path = "../..", editable = true }
