[project]
name = "neko"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"

# Managed with uv; refresh the lockfile with `uv lock`.
dependencies = [
    "dify_plugin",
    "flask>=3.0.3,<4",
    "werkzeug>=3.1.0",
]

[tool.uv.sources]
dify_plugin = { path = "../..", editable = true }
