[project]
name = "notion_datasource"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"

# Managed with uv; refresh the lockfile with `uv lock`.
dependencies = [
    "dify_plugin",
    "requests>=2.32.5",
    "werkzeug>=3.1.7",
]

[tool.uv.sources]
dify_plugin = { path = "../..", editable = true }
