[project]
name = "dify-openai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"

# Managed with uv; refresh the lockfile with `uv lock`.
dependencies = [
    "dify_plugin",
    "httpx>=0.28.1,<1",
    "numpy~=1.26.4",
    "openai~=2.3.0",
    "pydub~=0.25.1",
    "tiktoken>=0.12.0",
]

[tool.uv.sources]
dify_plugin = { path = "../..", editable = true }
