[project]
name = "dify-openai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"

# Managed with uv; refresh the lockfile with `uv lock`.
dependencies = [
    "dify_plugin>=0.5.0",
    "httpx>=0.28.1,<1",
    "numpy~=1.26.4",
    "openai~=2.3.0",
    "tiktoken~=0.8.0",
]
