[project]
name = "openai_compat"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"

# Managed with uv; refresh the lockfile with `uv lock`.
dependencies = [
    "dify_plugin",
    "httpx>=0.28.1,<1",
    "openai>=1.99.9",
]

[tool.uv.sources]
dify_plugin = { path = "../..", editable = true }
