[project]
name = "slack_trigger"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"

# Managed with uv; refresh the lockfile with `uv lock`.
dependencies = [
    "dify_plugin",
    "werkzeug>=3.1.0",
]

[tool.uv.sources]
dify_plugin = { path = "../..", editable = true }
